test/errors/assert/if.yasl

if true {

    assert false
    echo 2
}
